# lightning-queen

./: .gitignore  CMakeLists.txt  LICENSE  README.md
common_parts/: CMakeLists.txt
common_parts/cuda_stopwatch/: CMakeLists.txt  CudaStopwatch.cu  CudaStopwatch.cuh
common_parts/fs_handler/: FileHandler.h  fs_handler.h  fs_type_traits.h
common_parts/genome_zipper/: CMakeLists.txt  ZippedGenome.h  genome_zipper.h
common_parts/stopwatch/: CMakeLists.txt  Stopwatch.h
common_parts/thread_safe_queue/: ThreadSafeQueue.h
data/: CMakeLists.txt  README.md  main.cpp
data_generator/: CMakeLists.txt  README.md  main.cpp
data_generator/genome_generator/: CMakeLists.txt  main.cpp
data_generator/genome_generator/inc/: genome_generator.h
data_generator/genome_generator/src/: genome_generator.cpp
data_generator/genome_zipper/: CMakeLists.txt  main.cpp
part_1_simple_reading/: CMakeLists.txt  main.cpp
part_1_simple_reading/inc/: ThreadSafeQueue.h  analyzer.cuh  helpers.h
part_1_simple_reading/src/: analyzer.cu  helpers.cpp
part_2_simple_reading_thread_safe/: CMakeLists.txt
part_2_simple_reading_thread_safe/inc/: analyzer.cuh  helpers.h
part_2_simple_reading_thread_safe/src/: analyzer.cu
solutions/: CMakeLists.txt
solutions/common_parts/: CMakeLists.txt
solutions/common_parts/cuda_validator/: CMakeLists.txt  cuda_validator.h
solutions/common_parts/fs_handler/: CMakeLists.txt  fs_handler.h
solutions/common_parts/pinned_memory_handler/: CMakeLists.txt  PinnedMemoryHandler.cu  PinnedMemoryHandler.cuh
solutions/common_parts/thread_safe_queue/: CMakeLists.txt
solutions/common_parts/validator/: CMakeLists.txt  validator.h
solutions/part_1_simple_reading/: CMakeLists.txt  main.cpp
solutions/part_1_simple_reading/inc/: analyzer.cuh
solutions/part_1_simple_reading/src/: analyzer.cu
solutions/part_2_simple_reading_cache_friendly/: CMakeLists.txt  main.cpp
solutions/part_2_simple_reading_cache_friendly/inc/: analyzer.cuh
solutions/part_2_simple_reading_cache_friendly/src/: analyzer.cu
solutions/part_3_pinned_memory/: CMakeLists.txt  main.cpp
solutions/part_3_pinned_memory/inc/: PinnedFileHandler.cuh  analyzer.cuh  producer.cuh
solutions/part_3_pinned_memory/src/: PinnedFileHandler.cu  analyzer.cu  producer.cu
solutions/part_3_pinned_memory_async/: CMakeLists.txt  main.cpp
solutions/part_3_pinned_memory_async/inc/: analyzer.cuh  producer.cuh
solutions/part_3_pinned_memory_async/src/: analyzer.cu  producer.cu
solutions/part_3_zero_copy_pinned_memory/: CMakeLists.txt  main.cpp
solutions/part_3_zero_copy_pinned_memory/inc/: analyzer.cuh  producer.cuh
solutions/part_3_zero_copy_pinned_memory/src/: analyzer.cu  producer.cu
solutions/part_4_zipped_genome/: CMakeLists.txt
solutions/part_4_zipped_genome/inc/: analyzer.cuh  producer.cuh
solutions/part_4_zipped_genome/src/: analyzer.cu
solutions/part_5_zipped_genome_optimized/: CMakeLists.txt  main.cpp
solutions/part_5_zipped_genome_optimized/inc/: analyzer.cuh  producer.cuh
solutions/part_5_zipped_genome_optimized/src/: analyzer.cu  producer.cu
tests/: CMakeLists.txt
tests/test_common_parts/: CMakeLists.txt
tests/test_common_parts/test_genome_zipper/: CMakeLists.txt  main.cpp  test_genome_zipper_unzip.h  test_genome_zipper_zip.cpp  test_genome_zipper_zip.h
