add_subdirectory(common_parts)
include_directories(common_parts)

add_subdirectory(part_1_simple_reading)
add_subdirectory(part_2_simple_reading_cache_friendly)
add_subdirectory(part_3_pinned_memory)
add_subdirectory(part_3_pinned_memory_async)
add_subdirectory(part_3_zero_copy_pinned_memory)
add_subdirectory(part_4_zipped_genome)
add_subdirectory(part_5_zipped_genome_optimized)